# csiro

./: .gitmodules  README.md
hello-world/: Cargo.toml  README.rst  Xargo.toml  env.sh  thumbv7m-unknown-linux-uclibc.json
hello-world/.cargo/: config
hello-world/src/: main.rs
llvm-test/: arm-gcc.sh  compile.sh
project-template/: Cargo.toml  Xargo.toml  env.sh  thumbv7m-unknown-linux-uclibc.json
project-template/.cargo/: config
project-template/hello-world/: Cargo.toml
verification-scripts/: README.md  config.toml  conftest.py  kubos-file-client  kubos-shell-client  requirements.txt  test_app.py  test_file.py  test_monitor.py  test_scheduler.py  test_scheduler_app.py  test_scheduler_multiple_apps.py  test_shell.py  test_telemetry.py  test_telemetry_load.py
verification-scripts/mission-app/: manifest.toml  testTask.json
verification-scripts/mission-app-1/: manifest.toml  testTask.json
verification-scripts/mission-app-2/: manifest.toml  test.sh
verification-scripts/mission-app-3/: manifest.toml
verification-scripts/mission-app-4/: manifest.toml
verification-scripts/mission-app-5/: manifest.toml
